<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_states"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_states" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_emergency"
            android:title="@string/menu_emergency" />
        <item
            android:id="@+id/nav_tourism"
            android:icon="@drawable/ic_tourism"
            android:title="@string/menu_tourism" />
        <item
            android:id="@+id/nav_universities"
            android:icon="@drawable/ic_education"
            android:title="@string/menu_universities" />
        <item
            android:id="@+id/nav_geography"
            android:icon="@drawable/ic_geography"
            android:title="@string/menu_geography" />
        <item
            android:id="@+id/nav_traffic"
            android:icon="@drawable/ic_traffic"
            android:title="@string/menu_traffic" />
        <item
            android:id="@+id/nav_visitor_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_visitor_info" />
    </group>
</menu>

